--- a/Implementierung/Restaurant/Restaurant/App.config
+++ b/Implementierung/Restaurant/Restaurant/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="Restaurant_TestEntities" connectionString="metadata=res://*/Restaurant_Test.csdl|res://*/Restaurant_Test.ssdl|res://*/Restaurant_Test.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\;initial catalog=Restaurant_Test;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Restaurant_BestellungenEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\;initial catalog=Restaurant_Bestellungen;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
